--- a/index.Rmd_KEEP.html
+++ b/index.Rmd_KEEP.html
@@ -477,6 +477,15 @@ $(document).ready(function () {
   <a href="agenda.html">Agenda</a>
 </li>
 <li>
+  <a href="SURVEY.html">Questionnaire Outcomes</a>
+</li>
+<li>
+  <a href="question.html">Questionnaire</a>
+</li>
+<li>
+  <a href="presentations.html">Presentations</a>
+</li>
+<li>
   <a href="mailto:&lt;antonio.bonaduce@nersc.no&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -2087,6 +2096,15 @@ div.tocify {
 </li>
 <li>
 <a href="agenda.html">Agenda</a>
+</li>
+<li>
+<a href="SURVEY.html">Questionnaire Outcomes</a>
+</li>
+<li>
+<a href="question.html">Questionnaire</a>
+</li>
+<li>
+<a href="presentations.html">Presentations</a>
 </li>
 <li>
 <p><a href="mailto:&lt;antonio.bonaduce@nersc.no&gt;"> <span class="fa fa-envelope fa-lg"></span></p>
