--- a/index.Rmd_KEEP.html
+++ b/index.Rmd_KEEP.html
@@ -477,13 +477,13 @@ $(document).ready(function () {
   <a href="agenda.html">Agenda</a>
 </li>
 <li>
-  <a href="SURVEY.html">Questionnaire Outcomes</a>
-</li>
-<li>
-  <a href="question.html">Questionnaire</a>
-</li>
-<li>
   <a href="presentations.html">Presentations</a>
+</li>
+<li>
+  <a href="minutes.html">Minutes</a>
+</li>
+<li>
+  <a href="question_2nd.html">Questionnaire</a>
 </li>
 <li>
   <a href="mailto:&lt;antonio.bonaduce@nersc.no&gt;">
@@ -2098,13 +2098,13 @@ div.tocify {
 <a href="agenda.html">Agenda</a>
 </li>
 <li>
-<a href="SURVEY.html">Questionnaire Outcomes</a>
-</li>
-<li>
-<a href="question.html">Questionnaire</a>
-</li>
-<li>
 <a href="presentations.html">Presentations</a>
+</li>
+<li>
+<a href="minutes.html">Minutes</a>
+</li>
+<li>
+<a href="question_2nd.html">Questionnaire</a>
 </li>
 <li>
 <p><a href="mailto:&lt;antonio.bonaduce@nersc.no&gt;"> <span class="fa fa-envelope fa-lg"></span></p>
