--- a/index.Rmd_KEEP.html
+++ b/index.Rmd_KEEP.html
@@ -266,7 +266,7 @@ h6 {
 }
 </style>
 
-<link href="data:text/css,%3Cstyle%20type%3D%22text%2Fcss%22%3E%0Abody%7B%20%0Afont%2Dsize%3A%2016pt%3B%0A%7D%0Atd%20%7B%20%0Afont%2Dsize%3A%208px%3B%0A%7D%0Ah1%2Etitle%20%7B%0Afont%2Dsize%3A%2038px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Ah1%20%7B%20%0Afont%2Dsize%3A%2028px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Ah2%20%7B%20%0Afont%2Dsize%3A%2022px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Ah3%20%7B%20%0Afont%2Dsize%3A%2018px%3B%0Afont%2Dfamily%3A%20%22Times%20New%20Roman%22%2C%20Times%2C%20serif%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Acode%2Er%7B%20%0Afont%2Dsize%3A%2016px%3B%0A%7D%0Apre%20%7B%20%0Afont%2Dsize%3A%2014px%3B%0A%7D%0Abody%20%7B%0Atext%2Dalign%3A%20justify%0A%7D%0A%3C%2Fstyle%3E%0A" rel="stylesheet" type="text/css" />
+<link href="data:text/css,%3Cstyle%20type%3D%22text%2Fcss%22%3E%0Abody%20%7B%20%0Afont%2Dsize%3A%2020pt%3B%0Acolor%3A%20DarkRed%3B%0A%7D%0Atd%20%7B%20%0Afont%2Dsize%3A%208px%3B%0A%7D%0Ah1%2Etitle%20%7B%0Afont%2Dsize%3A%2038px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Ah1%20%7B%20%0Afont%2Dsize%3A%2028px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Ah2%20%7B%20%0Afont%2Dsize%3A%2022px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Ah3%20%7B%20%0Afont%2Dsize%3A%2022px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Acode%2Er%7B%20%0Afont%2Dsize%3A%2016px%3B%0A%7D%0Apre%20%7B%20%0Afont%2Dsize%3A%2014px%3B%0A%7D%0Abody%20%7B%20font%2Dsize%3A%2012pt%3B%0Atext%2Dalign%3A%20justify%0A%7D%0A%3C%2Fstyle%3E%0A" rel="stylesheet" type="text/css" />
 
 
 
@@ -484,6 +484,9 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="question_2nd.html">Questionnaire</a>
+</li>
+<li>
+  <a href="SURVEY_2nd.html">Questionnaire Outcome</a>
 </li>
 <li>
   <a href="mailto:&lt;antonio.bonaduce@nersc.no&gt;">
@@ -1838,7 +1841,7 @@ h6 {
   text-align: left;
 }
 </style>
-<p><link href="data:text/css,%3Cstyle%20type%3D%22text%2Fcss%22%3E%0Abody%7B%20%0Afont%2Dsize%3A%2016pt%3B%0A%7D%0Atd%20%7B%20%0Afont%2Dsize%3A%208px%3B%0A%7D%0Ah1%2Etitle%20%7B%0Afont%2Dsize%3A%2038px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Ah1%20%7B%20%0Afont%2Dsize%3A%2028px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Ah2%20%7B%20%0Afont%2Dsize%3A%2022px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Ah3%20%7B%20%0Afont%2Dsize%3A%2018px%3B%0Afont%2Dfamily%3A%20%22Times%20New%20Roman%22%2C%20Times%2C%20serif%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Acode%2Er%7B%20%0Afont%2Dsize%3A%2016px%3B%0A%7D%0Apre%20%7B%20%0Afont%2Dsize%3A%2014px%3B%0A%7D%0Abody%20%7B%0Atext%2Dalign%3A%20justify%0A%7D%0A%3C%2Fstyle%3E%0A" rel="stylesheet" type="text/css" /></p>
+<p><link href="data:text/css,%3Cstyle%20type%3D%22text%2Fcss%22%3E%0Abody%20%7B%20%0Afont%2Dsize%3A%2020pt%3B%0Acolor%3A%20DarkRed%3B%0A%7D%0Atd%20%7B%20%0Afont%2Dsize%3A%208px%3B%0A%7D%0Ah1%2Etitle%20%7B%0Afont%2Dsize%3A%2038px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Ah1%20%7B%20%0Afont%2Dsize%3A%2028px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Ah2%20%7B%20%0Afont%2Dsize%3A%2022px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Ah3%20%7B%20%0Afont%2Dsize%3A%2022px%3B%0Acolor%3A%20DarkBlue%3B%0A%7D%0Acode%2Er%7B%20%0Afont%2Dsize%3A%2016px%3B%0A%7D%0Apre%20%7B%20%0Afont%2Dsize%3A%2014px%3B%0A%7D%0Abody%20%7B%20font%2Dsize%3A%2012pt%3B%0Atext%2Dalign%3A%20justify%0A%7D%0A%3C%2Fstyle%3E%0A" rel="stylesheet" type="text/css" /></p>
 <style type="text/css">
 .main-container {
   max-width: 940px;
@@ -2105,6 +2108,9 @@ div.tocify {
 </li>
 <li>
 <a href="question_2nd.html">Questionnaire</a>
+</li>
+<li>
+<a href="SURVEY_2nd.html">Questionnaire Outcome</a>
 </li>
 <li>
 <p><a href="mailto:&lt;antonio.bonaduce@nersc.no&gt;"> <span class="fa fa-envelope fa-lg"></span></p>
